class Coordenada {
    int x, y;
    
    public Coordenada(int x, int y) {
        this.x = x;
        this.y = y;
    }
    
    public int obtenerX() {
        return x;
    }
    public int obtenerY() {
        return y;
    }
}
