class Pixel {
    int color;

    public Pixel() {
        this.color = 0;
    }

    public int obtenerColor() {
        return color;
    }

    public void establecerColor(int color) {
        this.color = color;
    }
}